fix: [FFM-5336]: remove fixed height on step content container in the Flag creation wizard to fix buttons being pushed out of view (#12445)

--- a/src/modules/75-cf/components/CreateFlagDialog/FlagDialog.module.scss
+++ b/src/modules/75-cf/components/CreateFlagDialog/FlagDialog.module.scss
@@ -34,8 +34,4 @@
       }
     }
   }
-
-  [class*='StepWizard'] > div[class*='stepDetails'] {
-    height: 650px;
-  }
 }
